<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that deletes all products data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view, which describes the empty box image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Empty inventory</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="details_activity_title_detail_product">Product details</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that edit the current product [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Toast message in catalog when current product has sell [CHAR LIMIT=NONE] -->
    <string name="catalog_sell_one_item">Sell one item of</string>

    <!-- Toast message in catalog when current product hasn't sell [CHAR LIMIT=NONE] -->
    <string name="catalog_sell_failed_one_item">Error with sell</string>

    <!-- Toast message in catalog when current product has sell and quantity change from zero to negative [CHAR LIMIT=NONE] -->
    <string name="catalog_sell_one_item_change_quantity">Quantity is already 0</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">5</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">20</string>

    <!-- Label for the product's price if the price is unknown [CHAR LIMIT=20] -->
    <string name="unknown_price">\???</string>

    <!-- Label for the product's quantity if the quantity is unknown [CHAR LIMIT=20] -->
    <string name="unknown_quantity">\???</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="activity_product_name">Product Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="activity_product_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="activity_product_quantity">Quantity</string>

    <!-- Text hint for image field in the editor [CHAR LIMIT=30] -->
    <string name="activity_product_image">Product Image</string>

    <!-- Text hint for order more field in the details [CHAR LIMIT=30] -->
    <string name="activity_product_order_more">Order more by email</string>









    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>
</resources>
