<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ProductEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_product_name" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_product_price" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_price"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_product_quantity" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_product_quantity"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_product_image" />

        <ImageButton
            android:id="@+id/edit_product_search_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/custom_theme_color"
            android:src="@drawable/ic_search_black_24dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/edit_product_image"
        android:layout_width="150dp"
        android:layout_height="150dp" />
</LinearLayout>