<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ProductEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_product_name" />

            <TextView
                android:id="@+id/details_product_name"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:text="Name" />

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_product_price" />

            <TextView
                android:id="@+id/details_product_price"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:text="10" />

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_product_quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus"
                    style="@style/EditorFieldStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-" />

                <TextView
                    android:id="@+id/details_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:text="100" />

                <Button
                    android:id="@+id/button_plus"
                    style="@style/EditorFieldStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_product_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:cropToPadding="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/details_product_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_product_order_more" />

</LinearLayout>